# gtb

./: .gitignore  LICENSE  collector.py  config-example.yml  config_parser.py  main.py  mypy.ini  pyproject.toml  readme.md  transformer.py
